# Meshborn

./: .gitignore  README.md  configure.ac
src/: .gitignore  Logger.h  LoggerManager.h  Makefile.am  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Meshborn.cpp  Meshborn.h  Meshborn.sln  Meshborn.vcxproj  Meshborn.vcxproj.filters  Model.h  Structures.h  post_build.bat  test.cpp
src/LibraryTest/: LibraryTest.vcxproj  test.cpp
src/Meshborn/: BaseWavefrontParser.cpp  BaseWavefrontParser.h  Makefile.am  Material.cpp  Material.h  MaterialLibraryParser.cpp  MaterialLibraryParser.h  Mesh.h  Meshborn.vcxproj  Meshborn.vcxproj.filters  Model.h  Structures.h  Vector3D.h  WaveFrontObjParser.cpp  WaveFrontObjParser.h
src/wavefront/: BaseWavefrontParser.cpp  BaseWavefrontParser.h  MaterialLibraryParser.cpp  MaterialLibraryParser.h  WaveFrontObjLoader.cpp  WaveFrontObjLoader.h  WaveFrontObjParser.cpp  WaveFrontObjParser.h
